--- a/salud.html.twig
+++ b/salud.html.twig
@@ -116,17 +116,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </a>
                     <div class="collapse navbar-collapse" id="navbarExample">
                         <ul class="navbar-nav m-auto">
-                            <li class="nav-item">
-                                <a class="nav-link px-2 text-uppercase mt-3 mt-sm-0" href="/">Gimnasio</a>
-                            </li>
-                            <li class="nav-item px-2 text-uppercase active">
-                                <a class="nav-link" href="/salud">Salud <span class="sr-only">(current)</span></a>
+                            <li class="nav-item active">
+                                <a class="nav-link px-2 text-uppercase mt-3 mt-sm-0" href="https://www.ictiva.com/">Gimnasio <span class="sr-only"></span></a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="/entrenador">Entrenador Virtual</a>
+                                <a class="nav-link" href="https://www.ictiva.com/#id-servicios">Servicios</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
-                                <a class="nav-link" href="nutricion">Nutrición</a>
+                                <a class="nav-link" href="https://www.ictiva.com/#id-dietas">Dietas</a>
+                            </li>
+                            <li class="nav-item px-2 text-uppercase">
+                                <a class="nav-link" href="https://www.ictiva.com/#id-app">App</a>
+                            </li>
+                            <li class="nav-item px-2 text-uppercase">
+                                <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase">
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
