--- a/salud.html.twig
+++ b/salud.html.twig
@@ -106,12 +106,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div id="menu-wrap" class="container-fluid bg-white fixed-top">
         <div class="row my-2">
-            <nav class="navbar navbar-toggleable-md navbar-light col-8 bg-white">
+            <nav class="navbar navbar-toggleable-md navbar-light col-7 bg-white">
                 <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-bg-icon"></span>
                 </button>
                 <div class="container pl-lg-0">
-                    <a class="navbar-brand ml-5 ml-lg-0" href="#page-top">
+                    <a class="navbar-brand ml-5 ml-lg-0" href="/">
                         <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
                     </a>
                     <div class="collapse navbar-collapse" id="navbarExample">
@@ -135,19 +135,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=salud">Tarifas</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div class="col-4 no-padding bg-white">
+            <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a>
+                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -187,12 +187,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </div>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">Inicia tu Entrenamiento</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=salud">Inicia tu Entrenamiento</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">Inicia tu Entrenamiento</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=salud">Inicia tu Entrenamiento</a></p>
                     </div>
                   </div>
                 </div>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h3 class="display-3 py-4 text-uppercase">"Mens Sana in Corpore Sano"</h1>
               <p class="lead py-2 text-bigger">Por que hacer ejercicio cambia tu cuerpo, tu mente y tu actitud</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=salud">Inicia tu Entrenamiento</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=salud">Inicia tu Entrenamiento</a>
                 </p>
             </div>
         </div>
