--- a/abdominales-en-casa.html.twig
+++ b/abdominales-en-casa.html.twig
@@ -279,7 +279,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-12 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">ABDOMINALES EN CASA</h1>
                     <p class="text-white h5 pb-lg-4">Realiza abdominales en casa con ictiva y luce un abdomen envidiable.</p>
-                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">APRENDE COMO HACER ABDOMINALES EN CASA</h2>
+                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">APRENDE COMO HACER ABDOMINALES EN CASA</h2>
                     <p class="text-white text-medium mb-5">Déjate guiar por ictiva,  aprende cómo hacer abdominales en casa correctamente y, consigue el abdomen que siempre deseaste.</p>
                     <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
@@ -384,7 +384,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div><img src="/homes/img/img-abdominales/abdominales1.jpg" class="img-fluid" alt=""></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
-                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">CÓMO SACAR ABDOMINALES EN CASA</h2>
+                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">CÓMO SACAR ABDOMINALES</h2>
                     <ul class="pl-0">
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Verás como en las tres sesiones iniciales, te explicaremos de forma clara y didáctica, todo lo que debes comprender para realizarlos con dominio y con la postura correcta. Y, le prosiguen sesiones que van in crescendo en dificultad, hasta modo experto.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Pero eso no es todo, en ictiva puedes trabajar el abdomen desde otras salas especializadas: Crossfitness, Fitness Girl, TDS, Tabata, Fitness, Cuerpo Perfecto o Gimnasia Hipopresiva.</li>
@@ -402,8 +402,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div><img src="/homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt=""></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
-                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">EJERCICIOS PARA TENER UNAS ABDOMINALES PERFECTAS</h2>
-                    <p class="mb-3 ls text-medium">Esta disciplina, cuenta con clases enfocadas a las diferentes partes del abdomen, con el objetivo de conseguir fortalecer la zona al completo, aprendiendo cómo sacar abdominales en casa. En cada clase verás el título, el nivel, tiempo, si es necesario material adicional y un número orientativo de las calorías que perderás al acabar el ejercicio.</p>
+                    <h2 class="mb-5 pt-2 text-center text-md-left text-primary">VIDEOS DE ABDOMINALES: EJERCICIOS</h2>
+                    <p class="mb-3 ls text-medium">Esta disciplina, cuenta con videos sesiones enfocadas a las diferentes partes del abdomen, con el objetivo de conseguir fortalecer la zona al completo. En cada videosesión verás el título, el nivel, tiempo, si es necesario material adicional y un número orientativo de las calorías que perderás al acabar el ejercicio.</p>
                     <p class="mb-3 ls text-medium">Aprenderás a realizar diferentes tipos de ejercicios, como por ejemplo: El Crunch,diversos tipos de planchas para cada zona determinada, abdominales oblicuos y variantes, Spiderman, el escalador, las tijeras, la zancada con giro y muchos más.</p>
                     <p class="mb-3 ls text-medium">En ictiva encontrarás también planes de entrenamientos específicos para conseguir tu objetivo.. Estos planes te pautan día a día, durante semanas, qué ejercicios realizar, con todos los pasos y la información necesaria, para que tú sólo tengas que encargarte de trabajar duro en tu abdomen.</p>
                     <p class="mb-3 ls text-medium">La rutina de  entrenamiento van in crescendo en modo de dificultad, por lo que, sea cual sea tu nivel, podrás seguirlo sin problemas. Jornada tras jornada te superarás a ti mismo/a y, te aseguramos, que al finalizar el plan, verás los resultados traducidos en salud y marcados en tu vientre.</p>
