--- a/gimnasio-virtual.html.twig
+++ b/gimnasio-virtual.html.twig
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Gym virtual: Entrena donde y cuando quieras con nuestro Gimnasio Virtual" />
+    <meta name="description" content="En nuestro Gym virtual encontrarás más de 800 rutinas de ejercicios difernetes así como muchos más servicios. Descubre ahora nuestro gimnasio virtual!" />
     <meta name="keywords" content="gym virtual, gimnasio virtual, virtual gym, virtuagym, ejercicios gym virtual, videos gym virtual, gymvirtual cardio, gymvirtual gluteos, gymvirtual principiantes, gymvirtual brazos" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Gym virtual: Entrena donde y cuando quieras con nuestro Gimnasio Virtual" />
-    <meta property="og:description" content="Gym virtual: Entrena donde y cuando quieras con nuestro Gimnasio Virtual" />
+    <meta property="og:description" content="En nuestro Gym virtual encontrarás más de 800 rutinas de ejercicios difernetes así como muchos más servicios. Descubre ahora nuestro gimnasio virtual!" />
     <meta property="og:url" content="https://www.ictiva.com/gimnasio-virtual/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
