--- a/abdominales-en-casa.html.twig
+++ b/abdominales-en-casa.html.twig
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
     <title>Abdominales en casa: Pon tu abdomen a prueba!</title>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">ABDOMINALES EN CASA</h1>
                     <p class="text-white h5 pb-lg-4">Realiza abdominales en casa con ictiva y luce un abdomen envidiable.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">APRENDE COMO HACER ABDOMINALES EN CASA</h2>
-                    <p class="text-white text-medium mb-5">Déjate guiar por ictiva,  aprende cómo hacer abdominales en casa correctamente y, consigue el abdomen que siempre deseaste.</p>
+                    <p class="text-white text-medium mb-5">Déjate guiar por ictiva,  aprende cómo hacer abdominales correctamente y, consigue el abdomen que siempre deseaste.</p>
                     <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
