--- a/index.html.twig
+++ b/index.html.twig
@@ -188,8 +188,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Últimos días</p>
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> -->
+                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mt-5 mb-3" style="background-color: rgba(229,117,50,.8);">Últimos días</p> -->
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto - Código: <span class="font-weight-bold">VERANO18</span></strong></p> 
                 <h1 class="display-1 text-white text-uppercase text-shadow">Gimnasio Online</h1>
                 <h4 class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">#ConquistaTuCuerpo</h4>
                 <h3 class="py-1 py-sm-3 py-lg-3 text-primary display-4">¡Somos más de 200.000!</h3>
