--- a/clases-yoga.html.twig
+++ b/clases-yoga.html.twig
@@ -44,12 +44,12 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Con las clases de yoga de ictiva ganarás flexibilidad, mejorarás tu postura y conquistarás la calma y estabilidad necesaria en tu día a día. Seas principiante o tengas un nivel mas avanzado, tenemso videosesiones para ti. Prueba gratis nuestras classes de yoga y empieza hoy mismo a cuidar de ti."/>
+    <meta name="description" content="Con las clases de yoga de ictiva ganarás flexibilidad, mejorarás tu postura y conquistarás la calma y estabilidad necesaria. PRUEBA GRATIS nuestras clases online."/>
     <meta name="keywords" content="Clases de yoga, Yoga clases, clase de yoga completa, clasesd e yoga online, clases de yoga en casa, clases de yoga en español, clases de yoga para principiantes." />
     <meta name”robots” content=”noindex, nofollow”>
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Clases de Yoga para hacer en casa: Empieza hoy mismo" />
-    <meta property="og:description" content="Con las clases de yoga de ictiva ganarás flexibilidad, mejorarás tu postura y conquistarás la calma y estabilidad necesaria en tu día a día. Seas principiante o tengas un nivel mas avanzado, tenemso videosesiones para ti. Prueba gratis nuestras classes de yoga y empieza hoy mismo a cuidar de ti." />
+    <meta property="og:description" content="Con las clases de yoga de ictiva ganarás flexibilidad, mejorarás tu postura y conquistarás la calma y estabilidad necesaria. PRUEBA GRATIS nuestras clases online." />
     <meta property="og:url" content="https://www.ictiva.com/clases-yoga" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
