--- a/ejercicios-aerobic.html.twig
+++ b/ejercicios-aerobic.html.twig
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Pierde peso y tonifica tu cuerpo al ritmo de la música, con nuestros ejercicios de aeróbic. Sesiones virtuales impartidas por nuestra Monitora Raquel Talavera. Prueba gratis ahora ictiva, tu gimnasio online y comprueba sus innumerables beneficios que te puede aportar." />
+    <meta name="description" content="Pierde peso y tonifica tu cuerpo al ritmo de la música, con nuestros ejercicios de aeróbic. PRUEBA GRATIS nuestras videosesiones online." />
     <meta name="keywords" content="aerobic, aerobic en casa, aerobic online, ejercicios de aerobic, ejercicios aerobicos, aerobic para principiantes" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Ejercicios de aeróbic en casa: Ponte en forma con nuestras sesiones online" />
-    <meta property="og:description" content="Pierde peso y tonifica tu cuerpo al ritmo de la música, con nuestros ejercicios de aeróbic. Sesiones virtuales impartidas por nuestra Monitora Raquel Talavera. Prueba gratis ahora ictiva, tu gimnasio online y comprueba sus innumerables beneficios que te puede aportar." />
+    <meta property="og:description" content="Pierde peso y tonifica tu cuerpo al ritmo de la música, con nuestros ejercicios de aeróbic. PRUEBA GRATIS nuestras videosesiones online." />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-aerobic/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
