--- a/ejercicios-para-adelgazar.html.twig
+++ b/ejercicios-para-adelgazar.html.twig
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
     <title>Ejercicios para adelgazar : Empieza hoy mismo desde casa! | ictiva</title>
