--- a/clases-yoga.html.twig
+++ b/clases-yoga.html.twig
@@ -46,7 +46,6 @@
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
     <meta name="description" content="Con las clases de yoga de ictiva ganarás flexibilidad, mejorarás tu postura y conquistarás la calma y estabilidad necesaria. PRUEBA GRATIS nuestras clases online."/>
     <meta name="keywords" content="Clases de yoga, Yoga clases, clase de yoga completa, clasesd e yoga online, clases de yoga en casa, clases de yoga en español, clases de yoga para principiantes." />
-    <meta name”robots” content=”noindex, nofollow”>
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Clases de Yoga para hacer en casa: Empieza hoy mismo" />
     <meta property="og:description" content="Con las clases de yoga de ictiva ganarás flexibilidad, mejorarás tu postura y conquistarás la calma y estabilidad necesaria. PRUEBA GRATIS nuestras clases online." />
@@ -253,10 +252,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 px-4 py-0 py-sm-2 p-xl-2">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
