--- a/ejercicios-pilates.html.twig
+++ b/ejercicios-pilates.html.twig
@@ -48,7 +48,6 @@
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
     <meta name="description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. PRUEBA GRATIS AHORA nuestras sesiones virtuales de pilates para hacer online." />
     <meta name="keywords" content="pilates en casa, pilates online, ejercicios de pilates, ejercicios de pilates con pelota, ejercicios de pilates para principiantes, ejercicios de pilates basicos, pilates ejercicios" />
-    <meta name”robots” content=”noindex,nofollow”>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pilates en casa - Ejercicios de pilates para estar en forma" />
     <meta property="og:description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. PRUEBA GRATIS AHORA nuestras sesiones virtuales de pilates para hacer online." />
@@ -56,7 +55,7 @@
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/ejercicios-pilates />
+    <link rel=”canonical” href=”https://www.ictiva.com/ejercicios-pilates"/>
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -259,10 +258,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 px-4 py-0 py-sm-2 p-xl-2">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +279,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">PILATES EN CASA</h1>
                     <p class="text-white h5 pb-lg-4">Aprende paso a paso y desde casa el Método Pilates.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Ejercicios de pilates para estar en forma.</h2>
-                    <p class="text-white text-medium mb-5">Cuida tu cuerpo y gana en salud con la practicando nuestras sesiones online.</p>
+                    <p class="text-white text-medium mb-5">Cuida tu cuerpo y gana en salud practicando nuestras sesiones online.</p>
                     <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Apúntate gratis</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
