--- a/ejercicios-espalda.html.twig
+++ b/ejercicios-espalda.html.twig
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="ictiva">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
     <title>Ejercicios espalda para fortalecer y prevenir dolores | ictiva</title>
@@ -258,7 +258,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-1 px-sm-4 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud">BLACKFRIDAY <span class="text-primary font-weight-bold pl-1">30% Dto</span></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
