--- a/index.html.twig
+++ b/index.html.twig
@@ -188,11 +188,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% dto - Código: BF30</p>
-                <!--<p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">30% Dto en todas las tarifas - Código: <span class="font-weight-bold">BF30</span></strong></p>-->
-                <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Gimnasio Online</h1>
+                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-2 mb-sm-4 mt-2" style="background-color: rgba(229,117,50,.8);">Especial BlackFriday - 30% dto - Código: BF30</p>
+                <p class="text-uppercase text-primary h3 pt-2 pb-2 pt-sm-3 pb-sm-3 mb-0 mb-lg-5 font-weight-bold font-less" style="background-color: rgba(0,0,0,.4);">Últimos días</p>
+                <h1 class="display-1 text-white text-uppercase text-shadow pt-3 pt-sm-5">Gimnasio Online</h1>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
-                <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">¡Más de 1.000 videosesiones de ejercicios en casa!</h2>
+                <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold px-3 font-less">¡Más de 1.000 videosesiones de ejercicios en casa!</h2>
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
