--- a/ejercicios-hipopresivos.html.twig
+++ b/ejercicios-hipopresivos.html.twig
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Abdominales hipopresivos: Aprende a realizar hipopresivos en casa | ictiva</title>
+    <title>Cómo hacer hipopresivos fácilmente y notar los resultados | ictiva</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Sesiones de  abdominales hipopresivos para reducir la cintura y reforzar el suelo pélvico, así como otros beneficios. Descubre cómo se realizan con ictiva desde casa" />
+    <meta name="description" content="Los ejercicios hipopresivos son muy beneficiosos, especialmente para las mujeres. Cómo hacerlos correctamente puede ser difícil sin una guía como esta." />
     <meta name="keywords" content="hipopresivos, ejercicios hipopresivos, gimnasia hipopresiva, gimnasia abdominal hipopresiva, abdominales hipopresivos,hipopresivos en casa, ejercicios abdominales hipopresivos, ejercicios hipopresivos en casa" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Abdominales hipopresivos: Aprende a realizar hipopresivos en casa" />
-    <meta property="og:description" content="Sesiones de  abdominales hipopresivos para reducir la cintura y reforzar el suelo pélvico, así como otros beneficios. Descubre cómo se realizan con ictiva desde casa" />
+    <meta property="og:title" content="Cómo hacer hipopresivos fácilmente y notar los resultados." />
+    <meta property="og:description" content="Los ejercicios hipopresivos son muy beneficiosos, especialmente para las mujeres. Cómo hacerlos correctamente puede ser difícil sin una guía como esta." />
     <meta property="og:url" content="https://www.ictiva.com/tabla-abdominales/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
