--- a/ejercicios-pilates.html.twig
+++ b/ejercicios-pilates.html.twig
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Pilates en casa | Ejercicios de pilates para estar en forma</title>
+    <title>Ejercicios de Pilates fáciles desde casa para estar en forma</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. PRUEBA GRATIS AHORA nuestras sesiones virtuales de pilates para hacer online." />
+    <meta name="description" content="Practicar pilates en casa es de lo más sencillo si conoces los ejercicios que se deben realizar y cómo respirar en cada uno de ellos. Empezamos con los más fáciles y sencillos." />
     <meta name="keywords" content="pilates en casa, pilates online, ejercicios de pilates, ejercicios de pilates con pelota, ejercicios de pilates para principiantes, ejercicios de pilates basicos, pilates ejercicios" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Pilates en casa - Ejercicios de pilates para estar en forma" />
-    <meta property="og:description" content="Cuida tu cuerpo  con ictiva y sus ejercicios de pilates en casa. PRUEBA GRATIS AHORA nuestras sesiones virtuales de pilates para hacer online." />
+    <meta property="og:title" content="Ejercicios de Pilates fáciles desde casa para estar en forma." />
+    <meta property="og:description" content="Practicar pilates en casa es de lo más sencillo si conoces los ejercicios que se deben realizar y cómo respirar en cada uno de ellos. Empezamos con los más fáciles y sencillos." />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-pilates" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
